--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,5 +28,8 @@ jobs:
       - name: Run Snyk OS
         run: |
           snyk test --unmanaged --print-deps --severity-threshold=critical
-          snyk monitor --project-name="GH_ACTION_C++" --unmanaged
-        continue-on-error: true
+        continue-on-error: false
+
+      # Run Snyk Monitor
+      - name: Run Snyk Monitor
+        run: snyk monitor --project-name="GH_ACTION_C++" --unmanaged
