--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,4 +33,4 @@ jobs:
       # Run Snyk Monitor
       - name: Run Snyk Monitor
         run: |
-          snyk monitor --project-name="GH_ACTION_C++" --target-reference="$(git branch --show-current)" --org=6d36ac7a-c75b-4179-8e73-6dd4d3fc8343 --unmanaged
+          snyk monitor --project-name="GH_ACTION_C++" --target-reference="demo_branch" --org=6d36ac7a-c75b-4179-8e73-6dd4d3fc8343 --unmanaged
